Rework of fsimx8mm device-trees
Makefile:
- set new layout of Makefile
DTS:
- Remove all BBDSI device-trees, merge the setting directly to the
specific device-tree
- Remove all specific clock settings for the displays. NXP have improved
their MIPI DSIM driver, so we don´t need these settings anymore.
- Add support for new PicoCoreMX8MM revision 1.30.
- Rework of picocoremx8mx.dts
- Rework of picocoremx8mm.dts
- Rename picocoremx8mx-tc358775-j070wvtc0211.dts to
picocoremx8mx-lcdif-tc358775-j070wvtc0211.dts
- Rename picocoremx8mx-tc358775-g133han01.dts to
picocoremx8mx-lcdif-tc358775-g133han01.dts
- Rename touch firmware name. There are two different firmware now, one
is specific for working with gloves the other is if the display has an
extra glass

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -6,7 +6,7 @@
 * published by the Free Software Foundation.
 */
 
-#include "picocoremx8mm-bbdsi.dts"
+#include "picocoremx8mm.dts"
 
 
 / {
@@ -94,7 +94,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio4>;
 		interrupts = <31 IRQ_TYPE_EDGE_FALLING>;
-		atmel,cfg_name = "atmel/mxt336u.cfg";
+		atmel,cfg_name = "atmel/mxt336u-gloves.cfg";
 		reset-gpios = <&pca963x 2 GPIO_ACTIVE_HIGH>;
 	};
 };
