--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dts
@@ -6,7 +6,7 @@
  * published by the Free Software Foundation.
  */
 
-#include "picocoremx8mm-bbdsi.dts"
+#include "picocoremx8mm.dts"
 
 #define CONFIG_PICOCOREMX8MM_INVERTED_XY
 
@@ -19,15 +19,6 @@
 
 &mipi_dsi {
 	status = "okay";
-
-	clocks = <&clk IMX8MM_CLK_DSI_CORE>,
-			 <&clk IMX8MM_CLK_DSI_PHY_REF>;
-	clock-names = "cfg", "pll-ref";
-	assigned-clocks = <&clk IMX8MM_CLK_DSI_CORE>,
-				  <&clk IMX8MM_CLK_DSI_PHY_REF>;
-	assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_266M>,
-					 <&clk IMX8MM_VIDEO_PLL1_OUT>;
-	assigned-clock-rates = <266000000>, <27000000>;
 
 	panel@0 {
 		reg = <0>;
