--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
@@ -6,7 +6,7 @@
 * published by the Free Software Foundation.
 */
 
-#include "picocoremx8mm-bbdsi.dts"
+#include "picocoremx8mm.dts"
 
 
 &mipi_dsi {
