--- a/arch/arm64/boot/dts/F+S/picocoremx8mn.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn.dts
@@ -629,6 +629,21 @@
 	fsl,spi-num-chipselects = <1>;
 	cs-gpios = <&gpio5 9 GPIO_ACTIVE_LOW>;
 	status = "okay";
+
+	can0: can@0 {
+		compatible = "microchip,mcp2515";
+		reg = <0>;
+		clocks = <&mcp2515_clk>;
+		interrupt-parent = <&gpio1>;
+		interrupts = <9 IRQ_TYPE_EDGE_FALLING>;
+		spi-max-frequency = <10000000>;
+
+		mcp2515_clk: oscillator {
+				#clock-cells = <0>;
+				compatible = "fixed-clock";
+				clock-frequency = <20000000>; //20MHz
+		};
+	};
 };
 #endif
 
