Improve ksz9893 support - DT property
Several options of the switch can be configured via strapping pins. Some
of these settings can be also configured via DT property. Yet there is
no implementation to setup the MAC mode via property. The flag
xmii-mac-mode can setup the register for the different kind of
interfaces mii, rmii and rgmii. The flag is only tested for ksz9893.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -625,6 +625,7 @@
 		compatible = "microchip,ksz9893";
 		status = "okay";
 		reg = <0x5f>;
+		xmii-mac-mode = <0>;
 
 		ports {
 			#address-cells = <1>;
