Fix-up for devicetrees fsimx8mm
Fix-up all devicetrees of architecture fsimx8mm.
- Support new module revisions
- Syntax issues

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -6,8 +6,8 @@
 * published by the Free Software Foundation.
 */
 
+#define CONFIG_PICOCOREMX8MM_MIPI_DSI
 #include "picocoremx8mm.dts"
-
 
 / {
 	regulators {
@@ -98,4 +98,3 @@
 		reset-gpios = <&pca963x 2 GPIO_ACTIVE_HIGH>;
 	};
 };
-
