--- a/arch/arm64/boot/dts/F+S/tbs2.dts
+++ b/arch/arm64/boot/dts/F+S/tbs2.dts
@@ -9,7 +9,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_TBS2_BOARD_REVISION	100
+#define CONFIG_TBS2_BOARD_REVISION	111
 
 /* MIPI DSI */
 #define CONFIG_TBS2_MIPI_DSI
@@ -44,9 +44,8 @@
 #define CONFIG_TBS2_UART_RFID
 
 /* UART_B - UART3 - BT */
-/* Some HW related issues */
-//#define CONFIG_TBS2_UART_B
-//#define CONFIG_TBS2_UART_B_RTSCTS
+#define CONFIG_TBS2_UART_B
+#define CONFIG_TBS2_UART_B_RTSCTS
 
 /* UART_C - UART4 */
 #define CONFIG_TBS2_UART_C
@@ -89,13 +88,13 @@
 	};
 
 #ifdef CONFIG_TBS2_BL_CTRL
-	/* HW Bug: Pin is used as VLCD so active high */
-	backlight_ldb {
+	backlight_mipi_dsi {
 		compatible = "pwm-backlight";
-		pwms = <&pwm2 0 3000000 0>;
-		brightness-levels = <0 1 5 10 18 28 41 56
-				     73 92 113 137 163 192 222 255>;
-		default-brightness-level = <15>;
+		pwms = <&pwm2 0 3000000 PWM_POLARITY_INVERTED>;
+		power-supply = <&reg_mipi_bl>;
+		brightness-levels = <0 46 48 50 55 61 69 80
+				     92 107 125 145 168 194 223 255>;
+		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif0";
 	};
 #endif
@@ -148,14 +147,14 @@
 		};
 
 #ifdef CONFIG_TBS2_MIPI_DSI
-		/* LCD power on voltage */
-		/* HW Bug this is backlight pwm and active low */
-		reg_vlcd: vlcd {
+		/* BL_ON */
+		reg_mipi_bl: backlight_mipi {
 			compatible = "regulator-fixed";
-			regulator-name = "VLCD";
+			regulator-name = "mipi-bl";
+			gpio = <&gpio5 1 GPIO_ACTIVE_HIGH>;
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
-			gpio = <&gpio5 1 GPIO_ACTIVE_LOW>;
+			enable-active-high;
 		};
 #endif
 
@@ -411,7 +410,6 @@
 		compatible = "eagleeyetech,ee0350et-2";
 		reg = <0>;
 		reset-gpios = <&gpio5 3 GPIO_ACTIVE_LOW>;
-		vci-supply = <&reg_vlcd>;
 		status = "okay";
 	};
 };
@@ -429,6 +427,7 @@
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2>;
+	#pwm-cells = <3>;
 	status = "okay";
 };
 #endif
@@ -543,7 +542,7 @@
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>, <&pinctrl_usdhc1_gpio>;
 	bus-width = <4>;
-	cd-gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
+	cd-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 	vmmc-supply = <&reg_vref_3v3>;
 	//vqmmc-supply = <&reg_vref_3v3>;
 	pm-ignore-notify;
@@ -636,7 +635,7 @@
 				/* BT_HOST_WAKE */
 				MX8MM_IOMUXC_GPIO1_IO04_GPIO1_IO4		0x00144
 				/* WL_REG_EN - Active High */
-				MX8MM_IOMUXC_SPDIF_EXT_CLK_GPIO5_IO5	0x00104
+				MX8MM_IOMUXC_SPDIF_EXT_CLK_GPIO5_IO5		0x00104
 				/* RS485/232
 				 * High = RS232 / Low = RS485
 				 */
@@ -674,9 +673,9 @@
 				MX8MM_IOMUXC_UART1_TXD_GPIO5_IO23		0x00144
 				/* GPIO_J1_7, MIPI_RESET  */
 				MX8MM_IOMUXC_GPIO1_IO01_GPIO1_IO1		0x00144
+				/* MIPI_RESET */
+				MX8MM_IOMUXC_SPDIF_TX_GPIO5_IO3			0x00144
 				/* BL_ON */
-				MX8MM_IOMUXC_SPDIF_TX_GPIO5_IO3			0x00104
-				/* VLCD_ON */
 				MX8MM_IOMUXC_SAI3_TXD_GPIO5_IO1			0x00104
 			>;
 		};
@@ -684,8 +683,8 @@
 #ifdef CONFIG_TBS2_ETH
 		pinctrl_fec1: fec1grp {
 			fsl,pins = <
-				MX8MM_IOMUXC_ENET_MDC_ENET1_MDC				0x00003
-				MX8MM_IOMUXC_ENET_MDIO_ENET1_MDIO			0x00003
+				MX8MM_IOMUXC_ENET_MDC_ENET1_MDC			0x00003
+				MX8MM_IOMUXC_ENET_MDIO_ENET1_MDIO		0x00003
 				MX8MM_IOMUXC_ENET_TD1_ENET1_RGMII_TD1		0x0001f
 				MX8MM_IOMUXC_ENET_TD0_ENET1_RGMII_TD0		0x0001f
 				MX8MM_IOMUXC_ENET_RD1_ENET1_RGMII_RD1		0x00091
@@ -693,11 +692,11 @@
 				MX8MM_IOMUXC_ENET_RXC_ENET1_RGMII_RXC		0x00091
 				MX8MM_IOMUXC_ENET_RX_CTL_ENET1_RGMII_RX_CTL	0x00091
 				MX8MM_IOMUXC_ENET_TX_CTL_ENET1_RGMII_TX_CTL	0x0001f
-				MX8MM_IOMUXC_ENET_TD2_ENET1_TX_CLK			0x4000001f
+				MX8MM_IOMUXC_ENET_TD2_ENET1_TX_CLK		0x4000001f
 				/* reset */
-				MX8MM_IOMUXC_GPIO1_IO05_GPIO1_IO5			0x00019
+				MX8MM_IOMUXC_GPIO1_IO05_GPIO1_IO5		0x00019
 				/* ETH_SW_INTn */
-				MX8MM_IOMUXC_GPIO1_IO11_GPIO1_IO11			0x00019
+				MX8MM_IOMUXC_GPIO1_IO11_GPIO1_IO11		0x00019
 			>;
 		};
 
@@ -815,8 +814,8 @@
 		pinctrl_usbotg1: usbotg1grp {
 			fsl,pins = <
 				/* Active high */
-				//MX8MM_IOMUXC_GPIO1_IO12_GPIO1_IO12		0x00144
-				MX8MM_IOMUXC_GPIO1_IO12_USB1_OTG_PWR	0x00104
+				MX8MM_IOMUXC_GPIO1_IO12_GPIO1_IO12		0x00144
+				//MX8MM_IOMUXC_GPIO1_IO12_USB1_OTG_PWR		0x00104
 				/* USB_OTG1_OC, active low */
 				MX8MM_IOMUXC_GPIO1_IO13_GPIO1_IO13		0x00144
 			>;
@@ -826,8 +825,8 @@
 #ifdef CONFIG_TBS2_SD_A
 		pinctrl_usdhc1_gpio: usdhc1grpgpio {
 			fsl,pins = <
-				/* CD - Active High */
-				MX8MM_IOMUXC_GPIO1_IO06_GPIO1_IO6		0x00184
+				/* CD - Active Low */
+				MX8MM_IOMUXC_GPIO1_IO06_GPIO1_IO6		0x00144
 			>;
 		};
 
@@ -839,7 +838,7 @@
 				MX8MM_IOMUXC_SD1_DATA1_USDHC1_DATA1		0x001d0
 				MX8MM_IOMUXC_SD1_DATA2_USDHC1_DATA2		0x001d0
 				MX8MM_IOMUXC_SD1_DATA3_USDHC1_DATA3		0x001d0
-				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT	0x001d0
+				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT		0x001d0
 			>;
 		};
 
@@ -851,7 +850,7 @@
 				MX8MM_IOMUXC_SD1_DATA1_USDHC1_DATA1		0x001d4
 				MX8MM_IOMUXC_SD1_DATA2_USDHC1_DATA2		0x001d4
 				MX8MM_IOMUXC_SD1_DATA3_USDHC1_DATA3		0x001d4
-				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT	0x001d0
+				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT		0x001d0
 			>;
 		};
 
@@ -863,7 +862,7 @@
 				MX8MM_IOMUXC_SD1_DATA1_USDHC1_DATA1		0x001d6
 				MX8MM_IOMUXC_SD1_DATA2_USDHC1_DATA2		0x001d6
 				MX8MM_IOMUXC_SD1_DATA3_USDHC1_DATA3		0x001d6
-				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT	0x001d0
+				MX8MM_IOMUXC_GPIO1_IO03_USDHC1_VSELECT		0x001d0
 			>;
 		};
 #endif
@@ -908,17 +907,17 @@
 			fsl,pins = <
 				MX8MM_IOMUXC_NAND_WE_B_USDHC3_CLK		0x00190
 				MX8MM_IOMUXC_NAND_WP_B_USDHC3_CMD		0x001d0
-				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0	0x001d0
-				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1	0x001d0
-				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2	0x001d0
-				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3	0x001d0
+				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x001d0
+				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x001d0
+				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x001d0
+				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x001d0
 				MX8MM_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x001d0
-				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5	0x001d0
-				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6	0x001d0
+				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x001d0
+				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x001d0
 				MX8MM_IOMUXC_NAND_CLE_USDHC3_DATA7		0x001d0
-				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE 	0x00190
+				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE 		0x00190
 				/* NAND READY -> RESET */
-				MX8MM_IOMUXC_NAND_READY_B_GPIO3_IO16	0x00144
+				MX8MM_IOMUXC_NAND_READY_B_USDHC3_RESET_B	0x00144
 			>;
 		};
 
@@ -926,17 +925,17 @@
 			fsl,pins = <
 				MX8MM_IOMUXC_NAND_WE_B_USDHC3_CLK		0x00194
 				MX8MM_IOMUXC_NAND_WP_B_USDHC3_CMD		0x001d4
-				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0	0x001d4
-				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1	0x001d4
-				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2	0x001d4
-				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3	0x001d4
+				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x001d4
+				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x001d4
+				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x001d4
+				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x001d4
 				MX8MM_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x001d4
-				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5	0x001d4
-				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6	0x001d4
+				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x001d4
+				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x001d4
 				MX8MM_IOMUXC_NAND_CLE_USDHC3_DATA7		0x001d4
-				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE 	0x00194
+				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE 		0x00194
 				/* NAND READY -> RESET */
-				MX8MM_IOMUXC_NAND_READY_B_GPIO3_IO16	0x00144
+				MX8MM_IOMUXC_NAND_READY_B_USDHC3_RESET_B	0x00144
 			>;
 		};
 
@@ -944,24 +943,24 @@
 			fsl,pins = <
 				MX8MM_IOMUXC_NAND_WE_B_USDHC3_CLK		0x00196
 				MX8MM_IOMUXC_NAND_WP_B_USDHC3_CMD		0x001d6
-				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0	0x001d6
-				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1	0x001d6
-				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2	0x001d6
-				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3	0x001d6
+				MX8MM_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x001d6
+				MX8MM_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x001d6
+				MX8MM_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x001d6
+				MX8MM_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x001d6
 				MX8MM_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x001d6
-				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5	0x001d6
-				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6	0x001d6
+				MX8MM_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x001d6
+				MX8MM_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x001d6
 				MX8MM_IOMUXC_NAND_CLE_USDHC3_DATA7		0x001d6
-				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE 	0x00196
+				MX8MM_IOMUXC_NAND_CE1_B_USDHC3_STROBE	 	0x00196
 				/* NAND READY -> RESET */
-				MX8MM_IOMUXC_NAND_READY_B_GPIO3_IO16	0x00144
+				MX8MM_IOMUXC_NAND_READY_B_USDHC3_RESET_B	0x00144
 			>;
 		};
 #endif
 
 		pinctrl_wdog: wdoggrp {
 			fsl,pins = <
-				MX8MM_IOMUXC_GPIO1_IO02_WDOG1_WDOG_B	0x000c6
+				MX8MM_IOMUXC_GPIO1_IO02_WDOG1_WDOG_B		0x000c6
 			>;
 		};
 
