--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dts
@@ -6,42 +6,40 @@
  * published by the Free Software Foundation.
  */
 
-#include "picocoremx8mm.dts"
-
+#define CONFIG_PICOCOREMX8MM_MIPI_DSI
 #define CONFIG_PICOCOREMX8MM_INVERTED_XY
+#include "picocoremx8mm.dts"
 
 &lcdif {
 	status = "okay";
-	/* important to overwrite max-res otherwise DRM lcdif will fail to find a suitable connector */
+	/* important to overwrite max-res otherwise DRM lcdif will fail
+	 * to find a suitable connector
+	 */
 	max-res = <4096>, <4096>;
 };
 
 
 &mipi_dsi {
 	status = "okay";
-
 	panel@0 {
 		reg = <0>;
 		compatible = "fs,j070wvtc0211-dsi"; /* one of panel-simple's
 		     		          match strings */
-
 		power-supply = <&reg_vlcd>;
-
-		dsi,flags = <0xB>; /* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST MIPI_DSI_MODE_VIDEO_AUTO_VERT */
+		/* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST
+		 * MIPI_DSI_MODE_VIDEO_AUTO_VERT
+		 */
+		dsi,flags = <0xB>;
 		dsi,format = <0x0>; /* MIPI_DSI_FMT_RGB888 */
 		dsi,lanes = <4>;
-
 		bus-flags = <1>;
 		refresh-rate = <60>;
                 rotate = <0>;
                 bus-format = <0x100a>;
-
 		panel-width-mm = <154>;
 		panel-height-mm = <85>;
-
 		display-timings {
 			native-mode = <&timing0>;
-
 			timing0: jd_j070wvtc0211 {
 				clock-frequency = <33300000>;
 				hactive = <800>;
@@ -69,44 +67,47 @@
 		compatible = "ti,sn65dsi84";
 		#gpio-cells = <2>;
 		#if 0
-		enable-gpios = <&gpio1 1 GPIO_ACTIVE_LOW>; /* <&pinctrl_mipi_dsi_rst>; */
+		/* <&pinctrl_mipi_dsi_rst>; */
+		enable-gpios = <&gpio1 1 GPIO_ACTIVE_LOW>;
 		#endif
-		sn65dsi84,addresses = <0x09 0x0A 0x0B 0x0D
-		                       0x10 0x11 0x12 0x13
-                               0x18 0x19 0x1A 0x1B
-                               0x20 0x21 0x22 0x23
-                               0x24 0x25 0x26 0x27
-                               0x28 0x29 0x2A 0x2B
-                               0x2C 0x2D 0x2E 0x2F
-                               0x30 0x31 0x32 0x33
-                               0x34 0x35 0x36 0x37
-                               0x38 0x39 0x3A 0x3B
-                               0x3C 0x3D 0x3E
-                               0x0D>;
+		sn65dsi84,addresses = <
+			0x09 0x0A 0x0B 0x0D
+			0x10 0x11 0x12 0x13
+			0x18 0x19 0x1A 0x1B
+			0x20 0x21 0x22 0x23
+			0x24 0x25 0x26 0x27
+			0x28 0x29 0x2A 0x2B
+			0x2C 0x2D 0x2E 0x2F
+			0x30 0x31 0x32 0x33
+			0x34 0x35 0x36 0x37
+			0x38 0x39 0x3A 0x3B
+			0x3C 0x3D 0x3E 0x0D
+		>;
 
-		sn65dsi84,values = </* reset and clock registers */
-		                    0x00 0x01 0x10 0x00
-                            /* DSI registers */
-		                    0x26 0x00 0x14 0x00
-		                    /* LVDS registers */
-                            0x78 0x00 0x03 0x00
-                            /* video registers */
-                            /* cha-al-len-l, cha-al-len-h */
-                            0x20 0x03 0x00 0x00
-                            /* cha-v-ds-l, cha-v-ds-h */
-                            0x00 0x00 0x00 0x00
-                            /* cha-sdl, cha-sdh*/
-                            0x21 0x00 0x00 0x00
-                            /* cha-hs-pwl, cha-hs-pwh */
-                            0x01 0x00 0x00 0x00
-                            /* cha-vs-pwl, cha-vs-pwh */
-                            0x01 0x00 0x00 0x00
-                            /*cha-hbp, cha-vbp */
-                            0x2e 0x00 0x00 0x00
-                            /* cha-hfp, cha-vfp*/
-                            0x00 0x00 0x00 0x00
-                            0x00 0x00 0x00
-                            0x01>;
+		sn65dsi84,values = <
+			/* reset and clock registers */
+			0x00 0x01 0x10 0x00
+			/* DSI registers */
+			0x26 0x00 0x14 0x00
+			/* LVDS registers */
+			0x78 0x00 0x03 0x00
+			/* video registers */
+			/* cha-al-len-l, cha-al-len-h */
+			0x20 0x03 0x00 0x00
+			/* cha-v-ds-l, cha-v-ds-h */
+			0x00 0x00 0x00 0x00
+			/* cha-sdl, cha-sdh*/
+			0x21 0x00 0x00 0x00
+			/* cha-hs-pwl, cha-hs-pwh */
+			0x01 0x00 0x00 0x00
+			/* cha-vs-pwl, cha-vs-pwh */
+			0x01 0x00 0x00 0x00
+			/*cha-hbp, cha-vbp */
+			0x2e 0x00 0x00 0x00
+			/* cha-hfp, cha-vfp*/
+			0x00 0x00 0x00 0x00
+			0x00 0x00 0x00 0x01
+		>;
 	};
 
 	/* touch I2C */
@@ -126,11 +127,12 @@
 		focaltech,touchscreen-inverted-x;
 		focaltech,touchscreen-inverted-y;
 #endif
-		focaltech,reset-gpio = <&gpio1 10 GPIO_ACTIVE_LOW>;
+#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
+		focaltech,reset-gpio = <&gpio1 13 GPIO_ACTIVE_LOW>;
+#else
+		focaltech,reset-gpio = <&gpio1 0 GPIO_ACTIVE_LOW>;
+#endif
 		focaltech,num-max-touches = <10>;
 		focaltech,display-coords = <0 0 800 480>;
 	};
 };
-
-
-
