--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-tc358764-g070y2-l01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-tc358764-g070y2-l01.dts
@@ -6,6 +6,7 @@
 * published by the Free Software Foundation.
 */
 
+#define CONFIG_PICOCOREMX8MM_MIPI_DSI_LVDS
 #include "picocoremx8mm.dts"
 
 &mipi_dsi {
@@ -45,30 +46,30 @@
 		compatible = "toshiba,tc358764";
 		reg = <0>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_mipi_dsi_en>;
-
+		pinctrl-0 = <&pinctrl_mipi_dsi_lvds_en>;
 		clocks = <&clk IMX8MM_CLK_CLKO2>;
-		reset-gpios = <&gpio1 13 GPIO_ACTIVE_LOW>;
+#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
+		reset-gpios = <&gpio4 31 GPIO_ACTIVE_HIGH>;
+#else
+		reset-gpios = <&gpio1 13 GPIO_ACTIVE_HIGH>;
+#endif
 		clock-names = "ext-clk";
 		ext-clk-rate = <33500000>;
-
-
 		vddc-supply = <&reg_vref_1v2>;
 		vddio-supply = <&reg_vref_1v8>;
 		vddlvds-supply = <&reg_vref_3v3>;
-
 		dsi,format = <0x0>; /* MIPI_DSI_FMT_RGB888 */
 		dsi,lanes = <4>;
-		dsi,flags = <0xB>; /* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST MIPI_DSI_MODE_VIDEO_AUTO_VERT */
+		/* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST
+		 * MIPI_DSI_MODE_VIDEO_AUTO_VERT
+		 */
+		dsi,flags = <0xB>;
 		refresh-rate = <60>;
-        rotate = <0>;
-
-
+		rotate = <0>;
 		panel-width-mm = <154>;
 		panel-height-mm = <85>;
 		display-timings {
 			native-mode = <&timing0>;
-
 			timing0: innolux_g070y2_l01 {
 				clock-frequency = <33500000>;
 				hactive = <800>;
@@ -83,7 +84,6 @@
 				pixelclk-active = <0>;
 			};
 		};
-
 		port@1 {
 			mipi_dsi_out: endpoint {
 				remote-endpoint = <&dsi_bridge_in>;
@@ -97,17 +97,13 @@
 		status = "okay";
 		compatible = "toshiba,tc358764";
 		reg = <0xf>;
-
 		clocks = <&clk IMX8MM_CLK_CLKO2>;
 		clock-names = "ref";
-
 		ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
-
 			port@2 {
 				reg = <2>;
-
 				dsi_bridge_in: endpoint {
 					remote-endpoint = <&mipi_dsi_out>;
 				};
@@ -119,4 +115,3 @@
 &lcdif {
 	status = "okay";
 };
-
