--- a/arch/arm64/boot/dts/F+S/picocoremx8mx-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -6,9 +6,8 @@
 * published by the Free Software Foundation.
 */
 
-
+#define CONFIG_PICOCOREMX8MX_MIPI_DSI
 #include "picocoremx8mx.dts"
-
 
 / {
 	regulators {
@@ -99,4 +98,3 @@
 		reset-gpios = <&pca963x 2 GPIO_ACTIVE_HIGH>;
 	};
 };
-
